# DuckyScript_Baby_Pool

./: README.md  pyproject.toml
duckysandbox/: __init__.py  analyzer.py  cli.py  emulator.py  html_report.py  keymap.py  parser.py  report.py  vmstate.py  webapp.py
payloads/: bashbunny_exfil.txt  feature_showcase.txt  linux_reverse_shell.txt  powershell_dropper.txt  recon_only.txt
tests/: test_analyzer.py  test_emulator.py  test_html_report.py  test_parser.py  test_report.py  test_webapp.py
